--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "solidity-coverage": "^0.7.19"
   },
   "dependencies": {
+    "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "eslint": "^8.12.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
