--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@chainlink/contracts": "^0.4.0",
+    "@openzeppelin/contracts-upgradeable": "^4.5.2",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "eslint": "^8.12.0",
     "eslint-config-prettier": "^8.5.0",
