--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "lint": "prettier --list-different 'contracts/**/*.sol'",
     "test": "npx hardhat test --network hardhat",
     "compile": "npmx hardhat compile",
-    "deploy": "hardhat deploy --network rinkeby"
+    "deploy": "hardhat deploy --network hardhat",
+    "coverage": "hardhat coverage"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.5",
